    unmaintained ALSA backend. Note that problems with the ALSA backend will
    not block future updates and Ubuntu flavors that ship without Pulseaudio
    need to participate in maintaining this code
  * Disable ALSA backend for Firefox 55 because it makes the build failure.
    This will remain disabled until somebody steps up to maintain it

  [ Rico Tzschichholz ]
  * Refresh patches
    - update debian/patches/ubuntu-search-defaults.patch 
    - update debian/patches/ubuntu-ua-string-changes.patch 
    - update debian/patches/unity-menubar.patch
  * Remove obsolete --enable-gio option
    - update debian/config/mozconfig.in
  * Refresh shipped locales
    - update debian/config/locales.*
    - update debian/config/searchplugins.conf
    - update debian/control

 -- Chris Coulson <chris.coulson@canonical.com>  Mon, 13 Mar 2017 18:42:26 +0000

firefox-trunk (53.0~a1~hg20170115r329516-0ubuntu1) yakkety; urgency=medium

  [ Chris Coulson ]
  * Update unity-menubar.patch with the latest version submitted upstream
  * Build with --disable-rust for now
  * Fix LP: #1659922 - Fix Apparmor denials triggered by shared memory usage
    when e10s is enabled

  [ Rico Tzschichholz ]
  * Unconditionally build-dep on libffi-dev

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Mon, 02 Jan 2017 12:33:44 +0100

firefox-trunk (52.0~a1~hg20161106r321308-0ubuntu1) yakkety; urgency=medium

  [ Chris Coulson ]
  * Refresh patches
    - update debian/patches/unity-menubar.patch
    - update debian/patches/revert-upstream-search-engine-changes.patch
    - update debian/patches/ubuntu-bookmarks.patch
  * Update debian/config/searchplugins.conf
  * Fix an issue in debian/distribution.ini that was causing malformed URLs
    to be sent to Mozilla services
  * Add warn-only-on-duplicates.patch to not fail the build on duplicates.
    This is required for the nightly builds, which we rename

  [ Rico Tzschichholz ]
  * Drop */browser/components from firefox.install.in, browsercomps was merged